--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>ProMan - Personal Portfolio HTML Template</title>
+    <title>Hitarth's - Personal Portfolio</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -85,7 +85,7 @@
                     <div class="typed-text d-none">Mobile Application Developer, Flutter Developer, Software Developer ,
                         Web Developer</div>
                     <div class="d-flex align-items-center mt-4">
-                        <a href="" class="btn btn-primary">Download CV</a>
+                        <a href="https://drive.google.com/file/d/1_KKpOMNdtOXtfXLG9qVclrXe_khxKt6m/view?usp=sharing" class="btn btn-primary">Download CV</a>
                         <!-- <button type="button" class="btn-play" data-bs-toggle="modal"
                             data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">
                             <span></span>
