--- a/index.html
+++ b/index.html
@@ -183,14 +183,13 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h1 class="display-5 mb-5">Skills & Experience</h1>
-                    <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam rebum
-                        amet diam ipsum clita dolor duo clita sit.</p>
+                    <p class="mb-4">Expert Flutter developer excelling in creating captivating UI/UX, seamless API integration, rigorous testing, and agile problem-solving. Proficient in cross-platform app development, dedicated to delivering polished solutions promptly.</p>
                     <h3 class="mb-4">My Skills</h3>
                     <div class="row align-items-center">
                         <div class="col-md-6">
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <h6 class="font-weight-bold">HTML</h6>
+                                    <h6 class="font-weight-bold">Flutter</h6>
                                     <h6 class="font-weight-bold">95%</h6>
                                 </div>
                                 <div class="progress">
@@ -200,21 +199,21 @@
                             </div>
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <h6 class="font-weight-bold">CSS</h6>
-                                    <h6 class="font-weight-bold">85%</h6>
+                                    <h6 class="font-weight-bold">Dart</h6>
+                                    <h6 class="font-weight-bold">90%</h6>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="85"
+                                    <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="90"
                                         aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <h6 class="font-weight-bold">PHP</h6>
-                                    <h6 class="font-weight-bold">90%</h6>
+                                    <h6 class="font-weight-bold">JavaScript</h6>
+                                    <h6 class="font-weight-bold">50%</h6>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90"
+                                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50"
                                         aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
@@ -222,17 +221,17 @@
                         <div class="col-md-6">
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <h6 class="font-weight-bold">Javascript</h6>
-                                    <h6 class="font-weight-bold">90%</h6>
+                                    <h6 class="font-weight-bold">Communication</h6>
+                                    <h6 class="font-weight-bold">85%</h6>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90"
+                                    <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="85"
                                         aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <h6 class="font-weight-bold">Angular JS</h6>
+                                    <h6 class="font-weight-bold">Leadership</h6>
                                     <h6 class="font-weight-bold">95%</h6>
                                 </div>
                                 <div class="progress">
@@ -242,7 +241,7 @@
                             </div>
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <h6 class="font-weight-bold">Wordpress</h6>
+                                    <h6 class="font-weight-bold">Ui/Ux</h6>
                                     <h6 class="font-weight-bold">85%</h6>
                                 </div>
                                 <div class="progress">
@@ -267,29 +266,25 @@
                     <div class="tab-content">
                         <div id="tab-1" class="tab-pane fade show p-0 active">
                             <div class="row gy-5 gx-4">
+                                 
                                 <div class="col-sm-6">
-                                    <h5>UI Designer</h5>
+                                    <h5>Chief Operating Officer</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
-                                    <h6 class="mb-0">Apex Software Inc</h6>
+                                    <p class="text-primary mb-1">2023 - Current</p>
+                                    <h6 class="mb-0">HasTag Solutions</h6>
                                 </div>
                                 <div class="col-sm-6">
-                                    <h5>Product Designer</h5>
+                                    <h5>Software Developer</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
-                                    <h6 class="mb-0">Apex Software Inc</h6>
+                                    <p class="text-primary mb-1">2023 - Current</p>
+                                    <h6 class="mb-0">iCoderz Solutions</h6>
                                 </div>
+                               
                                 <div class="col-sm-6">
-                                    <h5>Web Designer</h5>
+                                    <h5>Junior Flutter Developer</h5>
                                     <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
-                                    <h6 class="mb-0">Apex Software Inc</h6>
-                                </div>
-                                <div class="col-sm-6">
-                                    <h5>Apps Designer</h5>
-                                    <hr class="text-primary my-2">
-                                    <p class="text-primary mb-1">2000 - 2045</p>
-                                    <h6 class="mb-0">Apex Software Inc</h6>
+                                    <p class="text-primary mb-1">2022 - 2023</p>
+                                    <h6 class="mb-0">Kode Creators</h6>
                                 </div>
                             </div>
                         </div>
@@ -347,10 +342,9 @@
                             <i class="fa fa-crop-alt fa-2x text-dark"></i>
                         </div>
                         <div class="ms-sm-4">
-                            <h4 class="mb-3">Creative Design</h4>
-                            <h6 class="mb-3">Start from <span class="text-primary">$199</span></h6>
-                            <span>Stet lorem dolor diam amet vero eos. No stet est diam amet diam ipsum. Clita dolor duo
-                                clita sit sed sit dolor eos.</span>
+                            <h4 class="mb-3">UI/UX Design</h4>
+                            <h6 class="mb-3">Start from <span class="text-primary">$20</span></h6>
+                            <span>Start your design journey with our custom solutions, using Figma, Photoshop, and Adobe XD.</span>
                         </div>
                     </div>
                 </div>
@@ -360,10 +354,9 @@
                             <i class="fa fa-code-branch fa-2x text-dark"></i>
                         </div>
                         <div class="ms-sm-4">
-                            <h4 class="mb-3">Graphic Design</h4>
-                            <h6 class="mb-3">Start from <span class="text-primary">$199</span></h6>
-                            <span>Stet lorem dolor diam amet vero eos. No stet est diam amet diam ipsum. Clita dolor duo
-                                clita sit sed sit dolor eos.</span>
+                            <h4 class="mb-3">Web Design</h4>
+                            <h6 class="mb-3">Start from <span class="text-primary">$100</span></h6>
+                            <span>Elevate your website with polished designs, crafted using HTML, CSS, and JavaScript, or leveraging leading frameworks such as React, Angular, or Flutter.</span>
                         </div>
                     </div>
                 </div>
@@ -373,10 +366,9 @@
                             <i class="fa fa-code fa-2x text-dark"></i>
                         </div>
                         <div class="ms-sm-4">
-                            <h4 class="mb-3">Web Design</h4>
-                            <h6 class="mb-3">Start from <span class="text-primary">$199</span></h6>
-                            <span>Stet lorem dolor diam amet vero eos. No stet est diam amet diam ipsum. Clita dolor duo
-                                clita sit sed sit dolor eos.</span>
+                            <h4 class="mb-3">App Design</h4>
+                            <h6 class="mb-3">Start from <span class="text-primary">$100</span></h6>
+                            <span>Elevate your website with polished designs, crafted using HTML, CSS, and JavaScript, or leveraging leading frameworks such as React, Angular, or Flutter, seamlessly integrated from Figma to code.</span>
                         </div>
                     </div>
                 </div>
@@ -386,7 +378,7 @@
                             <i class="fa fa-laptop-code fa-2x text-dark"></i>
                         </div>
                         <div class="ms-sm-4">
-                            <h4 class="mb-3">UI/UX Design</h4>
+                            <h4 class="mb-3"></h4>
                             <h6 class="mb-3">Start from <span class="text-primary">$199</span></h6>
                             <span>Stet lorem dolor diam amet vero eos. No stet est diam amet diam ipsum. Clita dolor duo
                                 clita sit sed sit dolor eos.</span>
