--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="navbar-nav me-auto py-0"> -->
                 <a href="#project" class="nav-item nav-link">Projects</a>
                 <!-- <a href="#team" class="nav-item nav-link">Team</a> -->
-                <a href="#testimonial" class="nav-item nav-link">Testimonial</a>
+                <!-- <a href="#testimonial" class="nav-item nav-link">Testimonial</a> -->
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
         </div>
@@ -82,7 +82,7 @@
                     <h3 class="text-primary mb-3">I'm</h3>
                     <h1 class="mb-3" style="font-size: 4rem;">Hitarth Parmar</h1>
                     <h2 class="typed-text-output d-inline"></h2>
-                    <div class="typed-text d-none">Mobile Application Developer, Flutter Developer, Software Developer ,
+                    <div class="typed-text d-none">Mobile Application Developer, Flutter Developer, Software Developer,
                         Web Developer</div>
                     <div class="d-flex align-items-center mt-4">
                         <a href="https://drive.google.com/file/d/1_KKpOMNdtOXtfXLG9qVclrXe_khxKt6m/view?usp=sharing" class="btn btn-primary">Download CV</a>
@@ -534,7 +534,7 @@
 
 
     <!-- Testimonial Start -->
-    <div class="container-fluid bg-light py-5 my-5 mt-5" id="testimonial">
+    <!-- <div class="container-fluid bg-light py-5 my-5 mt-5" id="testimonial">
         <div class="container-fluid py-5">
             <h1 class="display-5 text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">Testimonial</h1>
             <div class="row justify-content-center">
@@ -598,12 +598,12 @@
                     <div class="testimonial-right h-100">
                         <img class="img-fluid wow fadeIn" data-wow-delay="0.1s" src="img/testimonial-1.jpg" alt="">
                         <img class="img-fluid wow fadeIn" data-wow-delay="0.3s" src="img/testimonial-2.jpg" alt="">
-                        <img class="img-fluid wow fadeIn" data-wow-delay="0.5s" src="img/testimonial-3.jpg" alt="">
+                        <img class="img-fluid wow fadeIn" data-wow-delay="0.5s" src="img/ testimonial-3.jpg" alt="">
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Testimonial End -->
 
 
@@ -624,10 +624,10 @@
                     <h3 class="fw-bold">123 Street, New York, USA</h3> -->
                     <hr class="w-100">
                     <p class="mb-2">Call me:</p>
-                    <h3 class="fw-bold">+012 345 6789</h3>
+                    <h3 class="fw-bold">+91 9586913540</h3>
                     <hr class="w-100">
                     <p class="mb-2">Mail me:</p>
-                    <h3 class="fw-bold">info@example.com</h3>
+                    <h3 class="fw-bold">hitarth.parmar0412@.com</h3>
                     <!-- <hr class="w-100"> -->
                     <!-- <p class="mb-2">Follow me:</p>
                     <div class="d-flex pt-2">
@@ -638,9 +638,9 @@
                     </div> -->
                 </div>
                 <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form
-                        with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're
-                        done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                    <p class="mb-4">Embark on a digital journey with me. With expertise in web and app development, I specialize in tailoring solutions to elevate your brand.
+                        Let's collaborate to unlock new digital horizons.
+                        <!-- <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p> -->
                     <!-- <form id="contactForm">
                         <div class="row g-3">
                             <div class="col-md-6">
