--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: [license-url] -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-        Designed by <a href="https://bootstrapmade.com/">Hitarth Parmar</a>
+        Designed by <a href="https://www.linkedin.com/in/parmar-hitarth">Hitarth Parmar</a>
       </div>
     </div>
   </footer><!-- End Footer -->
