--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>4 Dec 2001</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+<!--                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 95869-13540</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ahemdabad, Gujarat</span></li>
                 </ul>
