--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4 text-center">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="" style="border-radius: 7px;height: 49vh;">
+          <div class="col-lg-4" style="display: flex;align-items: center;">
+            <img src="assets/img/profile-img.jpeg" class="img-fluid" alt="" style="border-radius: 7px;height: 43vh;">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3> App/Web Developer</h3>
@@ -107,7 +107,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>4 Dec 2001</span></li>
-<!--                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li> -->
+                  <!--                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 95869-13540</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ahemdabad, Gujarat</span></li>
                 </ul>
@@ -205,33 +205,33 @@
             <div class="col-lg-6">
 
               <div class="progress">
-                <span class="skill">Flutter <i class="val">80%</i></span>
+                <span class="skill">Flutter <i class="val">90%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                  </div>
+                </div>
+              </div>
+
+              <div class="progress">
+                <span class="skill">Dart <i class="val">90%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                  </div>
+                </div>
+              </div>
+
+              <div class="progress">
+                <span class="skill">Java <i class="val">85%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+                  </div>
+                </div>
+              </div>
+
+              <div class="progress">
+                <span class="skill">Firebase <i class="val">80%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                  </div>
-                </div>
-              </div>
-
-              <div class="progress">
-                <span class="skill">Dart <i class="val">80%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                  </div>
-                </div>
-              </div>
-
-              <div class="progress">
-                <span class="skill">Java <i class="val">75%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                  </div>
-                </div>
-              </div>
-
-              <div class="progress">
-                <span class="skill">Firebase <i class="val">70%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
                   </div>
                 </div>
               </div>
@@ -241,33 +241,33 @@
             <div class="col-lg-6">
 
               <div class="progress">
-                <span class="skill">Leadership <i class="val">87%</i></span>
+                <span class="skill">Leadership <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="87" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                   </div>
                 </div>
               </div>
 
               <div class="progress">
-                <span class="skill">Communication <i class="val">80%</i></span>
+                <span class="skill">Communication <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                   </div>
                 </div>
               </div>
 
               <div class="progress">
-                <span class="skill">Lightroom <i class="val">70%</i></span>
+                <span class="skill">Lightroom <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                   </div>
                 </div>
               </div>
 
               <div class="progress">
-                <span class="skill">Figma <i class="val">75%</i></span>
+                <span class="skill">Figma <i class="val">85%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
                   </div>
                 </div>
               </div>
